[tool.poetry]
name = "finalproject-krylasov-leonid-m25-555"
version = "0.1.0"
description = "Платформа для отслеживания и симуляции торговли валютами"
authors = ["Leonid <leonid6011@gmail.com>"]
readme = "README.md"
packages = [
    { include = "valutatrade_hub" }
]
 
[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
prettytable = "^3.17.0"
requests = "^2.32.5"

[tool.poetry.scripts]
project = "valutatrade_hub.cli.interface:run_cli"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.valutatrade]
data_dir = "data"
rates_ttl_seconds = 300
base_currency = "USD"
log_file = "logs/app.log"